scss/_main/_layout.scss
/* Bourbon Neat outer-container mixin with support for outer gutters. */
@mixin outer-container-margin {
  @include outer-container;
  max-width: $max-width;
  padding: 0 flex-gutter($grid-columns) / 2;
  @include box-sizing(content-box);
  @each $breakpoint in $visual-grid-breakpoints {
    @if $breakpoint != nil {
      @include media($breakpoint) {
        padding: 0 flex-gutter($grid-columns);
      }
    }
  }
}

// Wrapper, main content
.wrapper {
  @include outer-container-margin;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -moz-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

body {
  // flexbox stuff to keep footer at bottom
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -moz-box-orient: vertical;
  -moz-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
}

.page {
  @include media($tablet) {
    @include span-columns(12);
    @include shift(2);
  }
  margin-top: 6rem;
  margin-bottom: 3rem;
}

